[gd_scene load_steps=22 format=3 uid="uid://bi4b7dnxnucbd"]

[ext_resource type="Script" path="res://tutorial/Scripts/tutorial.gd" id="1_b142m"]
[ext_resource type="Texture2D" uid="uid://dm78rlk8msoqr" path="res://assets/backgrounds/menu-rooms.png" id="2_jvkgq"]
[ext_resource type="FontFile" uid="uid://x68u5rsd0n4f" path="res://assets/fonts/Bungee-Regular.ttf" id="3_3pt5r"]
[ext_resource type="Texture2D" uid="uid://pnqwurhc8457" path="res://assets/buttons/icon-store.png" id="4_eabbb"]
[ext_resource type="Texture2D" uid="uid://chdudd6ypx4y" path="res://assets/buttons/Rectangle 65.png" id="5_adphf"]
[ext_resource type="Texture2D" uid="uid://3ctwbge6f7ur" path="res://assets/buttons/Vector.png" id="6_61sur"]
[ext_resource type="Texture2D" uid="uid://cmf022y1eu6r7" path="res://assets/icons/✈️.png" id="7_2q75v"]
[ext_resource type="Texture2D" uid="uid://dqanm1fmjmcp0" path="res://assets/icons/icon-kgem.png" id="8_nhl0r"]
[ext_resource type="Texture2D" uid="uid://dnnawuio3n54y" path="res://assets/termometro.png" id="9_2ssro"]
[ext_resource type="Texture2D" uid="uid://db2ayu2hawd7a" path="res://assets/icons/info-mini-tutorial.png" id="10_kpw4i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vgmxw"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_14cdh"]
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0s86m"]
bg_color = Color(0.686275, 0.686275, 0.686275, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3s4dj"]
bg_color = Color(0.509804, 0.509804, 0.509804, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_myyu1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qsevh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sqlh8"]
bg_color = Color(0.478431, 0.941176, 0.313726, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7ha76"]
bg_color = Color(0.572549, 0.980392, 0.439216, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0mm4u"]
bg_color = Color(0.403922, 0.807843, 0.262745, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7pqvw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ccia0"]

[node name="Tutorial" type="Node2D"]
script = ExtResource("1_b142m")

[node name="Menu-rooms" type="Sprite2D" parent="."]
position = Vector2(576, 324)
texture = ExtResource("2_jvkgq")

[node name="Tutorial" type="Sprite2D" parent="."]
position = Vector2(576, 323)

[node name="all-background" type="Panel" parent="."]
offset_right = 1160.0
offset_bottom = 648.0

[node name="Panel-branco" type="Panel" parent="."]
offset_left = 120.0
offset_top = 94.0
offset_right = 1024.0
offset_bottom = 494.0
theme_override_styles/panel = SubResource("StyleBoxFlat_vgmxw")

[node name="Label" type="Label" parent="."]
offset_left = 248.0
offset_top = 126.0
offset_right = 936.0
offset_bottom = 470.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3pt5r")
theme_override_font_sizes/font_size = 19
text = "Você nasceu em um lugar aleatório no mundo e essa é a situação atual:

A Terra está 1.5 °C mais quente e essa temperatura não vai parar de aumentar sozinha!

Ande pelo mundo com os aviões, use moedas e responda perguntas para começar atividades.
Atividades geram moedas, gemas do conhecimento ou aumentam a temperatura global.

Gemas do conhecimento são o único jeito de diminuir a temperatura global!"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Skip-tutorial" type="Button" parent="."]
offset_left = 131.0
offset_top = 544.0
offset_right = 339.0
offset_bottom = 608.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3pt5r")
theme_override_font_sizes/font_size = 17
theme_override_styles/normal = SubResource("StyleBoxFlat_14cdh")
theme_override_styles/hover = SubResource("StyleBoxFlat_0s86m")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3s4dj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_myyu1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_qsevh")
text = "Pular tutorial"

[node name="Next" type="Button" parent="."]
offset_left = 752.0
offset_top = 536.0
offset_right = 1024.0
offset_bottom = 616.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3pt5r")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_sqlh8")
theme_override_styles/hover = SubResource("StyleBoxFlat_7ha76")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0mm4u")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_7pqvw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ccia0")
text = "ok"

[node name="Icon-store" type="Sprite2D" parent="."]
visible = false
position = Vector2(180, 170)
texture = ExtResource("4_eabbb")

[node name="Rectangle65" type="Sprite2D" parent="."]
visible = false
position = Vector2(182, 291)
scale = Vector2(2, 2)
texture = ExtResource("5_adphf")

[node name="Vector" type="Sprite2D" parent="."]
visible = false
position = Vector2(183, 410)
scale = Vector2(1.2, 1.2)
texture = ExtResource("6_61sur")

[node name="✈️" type="Sprite2D" parent="."]
visible = false
position = Vector2(183, 410)
scale = Vector2(0.7, 0.7)
texture = ExtResource("7_2q75v")

[node name="Icon-kgem" type="Sprite2D" parent="."]
visible = false
position = Vector2(188, 302)
scale = Vector2(0.25, 0.25)
texture = ExtResource("8_nhl0r")

[node name="Termometro" type="Sprite2D" parent="."]
visible = false
position = Vector2(180, 170.5)
scale = Vector2(0.325, 0.733333)
texture = ExtResource("9_2ssro")

[node name="Info-mini-tutorial" type="Sprite2D" parent="."]
visible = false
modulate = Color(0, 0, 0, 1)
position = Vector2(188, 277)
scale = Vector2(0.6, 0.6)
texture = ExtResource("10_kpw4i")

[node name="Label2" type="Label" parent="."]
visible = false
offset_left = 256.0
offset_top = 368.0
offset_right = 904.0
offset_bottom = 443.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3pt5r")
theme_override_font_sizes/font_size = 35
text = "Bom Jogo! Boa sorte, você vai precisar!"
horizontal_alignment = 1
autowrap_mode = 3

[connection signal="pressed" from="Skip-tutorial" to="." method="_on_skiptutorial_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_next_pressed"]
